# text_editor

./: CHANGELOG  CMakeLists.txt  ErrorList  README  main.cpp
include/: file_loader.hpp  keyboard_input_observer.hpp  page.hpp
lib/: CMakeLists.txt
lib/UI/: button.cpp  menubar.cpp  panel.cpp  ui_manager.cpp
lib/include/: button.hpp  menubar.hpp  panel.hpp  ui.hpp  ui_manager.hpp
src/: file_loader.cpp  keyboard_input_observer.cpp  main.cpp  page.cpp
